--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.21.3",
     "@heroicons/react": "^2.0.17",
     "@next/eslint-plugin-next": "^13.3.0",
     "@portabletext/react": "^2.0.2",
@@ -17,7 +18,6 @@
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
-    "babel-eslint": "^10.1.0",
     "eslint": "^8.38.0",
     "framer-motion": "^10.11.6",
     "next": "13.3.0",
