--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "eslint-config-next": "^13.3.0",
     "tailwind-scrollbar": "^3.0.0"
   }
